Fixed swagger generation, added timelog deleting
