# server/src/controllers/user.controller.ts
@@ -4,8 +4,8 @@ import {User} from "../models/user.entity";
 import {Feedback, ILoginPayload, IUserPayload} from "../interfaces/user.interface";
 
 
-@Route("users")
-@Tags("User")
+@Route("/api/auth")
+@Tags("Auth")
 export default class UserController {
     @Post("/register")
     public async createUser(@Body() body: IUserPayload): Promise<User | Feedback> {
